<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/forgetpassword_background_img"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <EditText
        android:id="@+id/txt_email_forgetpass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dip"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="25dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_forgetpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <Button
        android:id="@+id/id_btn_forgetpass"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/btn_forget_pass"
        android:text="@string/txt_forgetpass_btn"
        android:onClick="resetpassword"
        android:textColor="#FFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_email_forgetpass" />
    <ProgressBar
        android:id="@+id/progressBar22"
        style="?android:attr/progressBarStyle"
        android:layout_width="71dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <Button
        android:id="@+id/btn_returnToIndex"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_return"
        android:text="@string/txt_goback"
        android:textColor="#FFFF"
        android:onClick="BtnGoBack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_btn_forgetpass"
        app:layout_constraintVertical_bias="0.017" />

</androidx.constraintlayout.widget.ConstraintLayout>