<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/bg_top"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/example_img" />


        <TextView
            android:id="@+id/txt_value_fname"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/back_to_dash"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/bg_button_rounded">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_circle"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="17dp"
            android:gravity="center"
            android:text="Retour au Tableau De Bord "
            android:textColor="@color/black"
            android:textSize="16sp" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_fullname" />

                <TextView
                    android:id="@+id/txt_value_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:padding="4dp"
                android:src="@drawable/ic_tel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_phone" />

                <TextView
                    android:id="@+id/txt_value_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:padding="4dp"
                android:src="@drawable/ic_email_directeur" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_email" />

                <TextView
                    android:id="@+id/txt_value_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </LinearLayout>



        <FrameLayout
            android:id="@+id/edit_profil"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/bg_button_rounded">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="180dp"
                android:layout_marginLeft="1dp"
                android:background="@drawable/bg_circle"
                android:padding="6dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Modifier Profil"
                android:textColor="@color/black" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>